# opengl-lab

./: .gitmodules  CMakeLists.txt  README.md  bake.sh  main.cpp  shader-test.glsl
modules/: 00-openglZero.cpp  01-hellogl-old.cpp  01-hellogl.cpp  02-firstTriangle-singleFile.cpp  02-firstTriangle.cpp  03-matricies-2.cpp  03-matricies.cpp  04-coloredCube.cpp  05-texturedCube.cpp  06-controls.cpp  07-objLoading.cpp  08-basicShading.cpp  CMakeLists.txt  hellogl.cpp
modules/headers/: common.hpp  controls.hpp  data.hpp  matrixTheory.hpp  utils.hpp
resources/: triangle.frag  triangle.vert
resources/shaders/: simpleTransform.vert  standardShading.frag  standardShading.vert  transformVertexShader.vert  triangle.frag
